# DeepOLA

./: .gitattributes  .gitignore  .gitmodules  Dockerfile  README.md  build_dockers.sh  data-gen.sh  experiments.md  generate-skew-data.sh  master_script.sh  requirements.txt  setup.py  sigmod2023-reproducibility.md
.github/workflows/: cargo-benchmark.yml  cargo-test-cs511.yml  cargo-test.yml  cargo-tpch-benchmark.yml  check-and-lint.yml
baselines/actian-vector/: README.md  extract-time.py  rewrite-queries.py  time-queries.sh  tpch-alter.sql  tpch-create.sql  tpch-load.py  tpch-load.sh
baselines/polars/: README.md
baselines/postgres/: 1-setup-postgres.sh  1a-restart-postgres.sh  2-obtain-correct-output.sh  2a-extract-output.sh  3-time-queries.sh  3a-extract-time.py  docker_postgres.sh  experiment-setup.sh  experiment-time.sh  experiment.sh  extract-time.py  postgres-expt.sh  runPostgresQueries.sh  setup_postgres.sh
baselines/presto/: README.md  Readme.md  experiment.py  presto-script.sh  presto-setup.md  row-ddl-parquet.sql  row-ddl.sql  setup_readme.md
baselines/progressive/: 1-setup-postgres.sh  1a-restart-postgres.sh  README.md  clean-data.py  experiment.sh  progressive-db.conf
baselines/resources/: 7.sql
baselines/vertica/: extract-time.py  time-queries.sh  tpch-alter.sql  tpch-create.sql  tpch-load.py
baselines/wanderjoin/: 1-setup-initial.sh  2-setup-postgres.sh  2-setup-xdb.sh  3-load-data.sh  4-run-queries.sh  README.md  experiment.sh  (+3 more)
deepola/: Cargo.toml  README.md  analyze-logs.ipynb  experiment.sh  experiment_ci.sh  experiment_depth.sh  test.py  utils.py
deepola/tpch_wake/: Cargo.toml
deepola/tpch_wake/benches/: tpch_polars.rs
deepola/tpch_wake/examples/: tpch_polars.rs
deepola/tpch_wake/src/: lib.rs  utils.rs
deepola/tpch_wake/src/queries/: mod.rs  q1.rs  q11.rs  q12.rs  q13.rs  q14.rs  q16.rs  q5.rs  q6.rs  q7.rs  q9.rs
deepola/wake/examples/tpch_polars/: Cargo.toml  main.rs  prelude.rs  q1.rs  q10.rs  q11.rs  q12.rs  q13.rs  q14.rs  q14c.rs  q15.rs  q16.rs  q17.rs  q18.rs  q19.rs  q1c.rs  q2.rs  q20.rs  q21.rs  q22.rs  q23.rs  q24.rs  q25.rs  q26.rs  q27.rs  q3.rs  q30.rs  q4.rs  q5.rs  q5c.rs  q6.rs  q6c.rs  q7.rs  q8.rs  q8c.rs  q9.rs  qa.rs  qb.rs  qc.rs  qd.rs  (+3 more)
deepola/wake/examples/tpch_polars/examples/: main.rs
deepola/wake/examples/tpch_polars/src/: lib.rs  tests.rs  utils.rs
deepola/wake/examples/tpch_polars/src/tpch/: mod.rs  q1.rs
dockerfiles/: data.Dockerfile  polars.Dockerfile  viz.Dockerfile  wake.Dockerfile  wanderjoin.Dockerfile
java/: Client.java  pom.xml  progressive-db.conf
queries/: tpch-1.json  tpch-1.sql
rust/: .gitignore  README.md
rust/runtime/: Cargo.toml  test_with_log.sh
rust/runtime/benches/: arithmetic.rs  csvreader.rs  forecast_cell.rs  groupby.rs  hash_join.rs  inner_join.rs  where_filter.rs
rust/runtime/examples/: cell_showcase.rs  forecast_eval.rs  run_forecast.sh
rust/runtime/examples/polars-tpch/: main.rs  q1.rs  q5.rs  utils.rs
rust/runtime/examples/tpch/: main.rs  q1.rs  q10.rs  q12.rs  q14.rs  q19.rs  q3.rs  q5.rs  q6.rs  utils.rs
rust/runtime/examples/tpch-q1/: main.rs
rust/runtime/examples/tpch_polars/: main.rs  q1.rs  utils.rs
rust/runtime/src/: lib.rs  processor.rs
rust/runtime/src/benchmarks/: join_utils.rs  mod.rs
rust/runtime/src/channel/: channel_group.rs  mod.rs  single_channel.rs
rust/runtime/src/data/: arithmetic.rs  array_data.rs  array_row.rs  data_type.rs  kv.rs  message.rs  meta_type.rs  mod.rs  payload.rs  schema.rs
rust/runtime/src/forecast/: cell.rs  mod.rs  notes.md  row.rs  score.rs  table.rs
rust/runtime/src/graph/: channel.rs  exec_service.rs  mod.rs  node.rs  node_base.rs
rust/runtime/src/operations/: README.md  aggregate.rs  csvreader.rs  expression.rs  filter.rs  filter_subquery.rs  groupby.rs  hashjoin.rs  joiner.rs  mod.rs  predicate.rs  select.rs  utils.rs
rust/runtime/src/polars_operations/: accumulator.rs  appender.rs  csvreader.rs  hash_join.rs  mod.rs  series_mq.rs  util.rs
rust/runtime/src/processor/: message_processor.rs  mod.rs  record_processor.rs  right_complete_processor.rs  set_processor.rs  stream_processor.rs
rust/runtime/src/resources/: lineitem-100.csv  q1_flatten.txt  test_arraydata.csv
rust/runtime/src/resources/tpc-h/scale=1/partition=1/: customer.tbl  lineitem.tbl  lineitem_sorted.tbl  orders_sorted.tbl  partsupp.tbl
scripts/: README.md  clean-data.py  convert-to-parquet.py  data-gen.sh  data-generation-requirements.txt  deep_data_gen.py  deep_query_gen.py  experiment_wake_ci.sh  experiment_wake_depth.sh  experiment_wake_tpch.sh  extract_accuracy.py  extract_accuracy_ci.py  merge_accuracy.py  obtain-time-taken.py  partition-by-size.py  partition-by-size.sh  plot_ci.py  plot_depth.py  plot_tpch.py  plot_tpch_error.py  plot_tpch_ola.py  setup-postgres.sh  test-correctness.py  viz-requirements.txt  wake-experiment.sh  wake-requirements.txt
src/: README.md  json_test.py  main.py  sample-query.json  test-query.py  test.py  test_joins.py  utils.py
(+367 files in other folders)
