[package]
name = "tpch_wake"
version = "0.1.0"
edition = "2021"
autoexamples = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concurrent-queue = "1.2.2"
csv = "1.1"
env_logger = "0.9.0"
fixed-vec-deque = "0.1.9"
generator = "0.6"
getset = "0.1.2"
itertools = "0.10"
log = "0.4.14"
nanoid = "0.4.0"
quick-error = "2.0.1"
rand = "0.8.5"
rayon = "1.5.2"
rustc-hash = "1.1.0"
simple-error = "0.2.3"
structopt = "0.3.26"
uuid = { version = "0.8", features = ["v4"] }
jemallocator = "0.3.2"
polars = "0.23.2"
glob = "0.3.0"
alphanumeric-sort = "1.4.4"
wake = { path = "../wake" }
lazy_static = "1.4.0"
regex = "1.6.0"

[dev-dependencies]
ctor = "0.1.21"
criterion = "0.3.5"
env_logger = "0.9.0"

[[example]]
name = "tpch_polars"

[[bench]]
name = "tpch_polars"
harness = false

[features]
default = []
debug_output = []