[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
getset = "0.1.2"
concurrent-queue = "1.2.2"
quick-error = "2.0.1"
simple-error = "0.2.3"
uuid = { version = "0.8", features = ["v4"] }
fixed-vec-deque = "0.1.9"
log = "0.4.14"
env_logger = "0.9.0"
nanoid = "0.4.0"
itertools = "0.10"
generator = "0.6"
rustc-hash = "1.1.0"

[dev-dependencies]
ctor = "0.1.21"
env_logger = "0.9.0"
log4rs = "1.0"
criterion = "0.3.5"

[[bench]]
name = "inner_join"
harness = false

[[bench]]
name = "arithmetic"
harness = false

[[bench]]
name = "csvreader"
harness = false

[[bench]]
name = "groupby"
harness = false

[[bench]]
name = "hash_join"
harness = false

[[bench]]
name = "where_filter"
harness = false
